--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -6,20 +6,20 @@
    "source": [
     "# Quick Start PyTorch\n",
     "\n",
-    "Welcome to FloydHub! If you are here, you have just achieved your first success on FH: running your first Job, congrats! Now let's go through the 'Hello World' of DL: the handwrittend digit classification tast using PyTorch as Deep Learning Framework."
+    "Welcome to FloydHub! If you're here, then you've just achieved your first success on FloydHub: running your first GPU-powered Job. 🎉 Congrats! Now let's go through the classic 'Hello World' of deep learning: the hand-written digit classification task. In this example, we'll be using PyTorch as our deep learning framework."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## One point, all the dependencies\n",
+    "## First things first - how to set up for success\n",
     "\n",
-    "Let's start defining what packgages we need to run this tutorial.\n",
+    "Let's first outline which machine learning packages we'll need to run this experiment:\n",
     "\n",
     "- [Numpy](http://www.numpy.org/) is the fundamental package for scientific computing with Python\n",
-    "- [PyTorch](http://pytorch.org/) is the Deep Learning framework we use\n",
-    "- [torchvision](http://pytorch.org/docs/master/torchvision/index.html) package consists of popular datasets, model architectures, and common image transformations for computer vision.\n",
+    "- [PyTorch](http://pytorch.org/) is the the deep learning framework we'll be using this example\n",
+    "- [torchvision](http://pytorch.org/docs/master/torchvision/index.html) package consists of popular datasets, model architectures, and common image transformations for computer vision\n",
     "- [matplotlib](https://matplotlib.org/) is a Python 2D plotting library which produces publication quality figures in a variety of hardcopy formats and interactive environments across platforms."
    ]
   },
@@ -60,16 +60,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MNIST Dataset\n",
+    "## ## The MNIST Dataset\n",
+    "The [MNIST](http://yann.lecun.com/exdb/mnist/) dataset is available for free and provides a great starting point for experimenting with deep learning. Normally, we'd want to create a separate Dataset on FloydHub for our data - but, in this case, the torchvision package actually provides a direct MNIST API that we'll be using.\n",
     "\n",
-    "The [MNIST](http://yann.lecun.com/exdb/mnist/) dataset is available for free and provide a good starting point into DL. `torchvision` already provides the MNIST API so we have not to define a custom pytorch dataset.\n",
+    "## Experiment structure\n",
+    "PyTorch experiments are typically structured in this way:\n",
     "\n",
-    "PyTorch experiments are structured in this way:\n",
+    "* Create a PyTorch dataset (if not already provided by the framework)\n",
+    "* Create an iterator on the dataset using the DataLoader API. This combines a dataset and a sampler, and provides single- or multi-process iterators over the dataset.\n",
     "\n",
-    "- create a PyTorch dataset if not already provided by the framework\n",
-    "- create an iterator on the dataset using the DataLoader API which combines a dataset and a sampler, and provides single- or multi-process iterators over the dataset.\n",
-    "\n",
-    "We have specified the `/MNIST` folder as absolute path, otherwise if we have used the local directory, the output of the instance will have contained also the data, consuming additional space and mixing code with data."
+    "Note below that we have specified the `/MNIST` folder as an absolute path - this is important. If we were to use the local directory, then we would have been mixing the output of the instance with our input data, which would consuming additional space and mixing code with data.\n"
    ]
   },
   {
@@ -118,12 +118,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### FloydHub best practice: separe the code from data\n",
-    "\n",
-    "The MNIST dataset is not particulary big, but a good FloydHub practice is to have a clean separation from the code to the data. In this example we have a small dataset and the downloading and preprocessing steps do not require a lot of time, but in the case of bigger dataset, we would have waste a lot of time! Luckily FloydHub comes in help: you can upload your dataset on FloydHub and mount it on your Job. This practice decouple your experiments from your data, optimizing the experiments's iteration workflow.\n",
-    "\n",
-    "For more info see: [create & upload a dataset](https://docs.floydhub.com/guides/create_and_upload_dataset/) and [mounting data to a job](https://docs.floydhub.com/guides/data/mounting_data/).\n",
-    "\n",
     "Let's take a closer look at MNIST:"
    ]
   },
@@ -203,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we have 60k black & white images of 28x28 pixels for training, and 10k for testing. Let's visualize what this sample look like:"
+    "So we have 60k black & white images of 28x28 pixels for training, and 10k for testing. Let's visualize what this samples look like:"
    ]
   },
   {
@@ -346,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Is time to prepare the DataLoader to perform the training, we have increased the batch size reducing the noise."
+    "Now it's time to prepare the DataLoader to perform the training - we have increased the batch size reducing the noise."
    ]
   },
   {
@@ -376,7 +370,12 @@
    "source": [
     "## Model\n",
     "\n",
-    "We use a 2 layer Neural Networks with ReLU as activation function, BatchNormalization and Dropout as regularizer."
+    "We use a 2 layer Neural Networks with ReLU as activation function, BatchNormalization and Dropout as regularizer. What does it means all these things:\n",
+    "\n",
+    "- [Neural Networks](https://en.wikipedia.org/wiki/Artificial_neural_network), a class of statistical models which take inspiration from the Human Neural System and represent the computation as a DAG(Direct Acyclic Graph), for a great introduction see this video: [But what *is* a Neural Network? | Deep learning](https://youtu.be/aircAruvnKk).\n",
+    "- [ReLU](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)) is the activation function, a non-linearity operation which takes inspiration from human biology. It's the magic that drive the learning process.\n",
+    "- [Batch Normalization](https://arxiv.org/abs/1502.03167). Training Deep Neural Networks is complicated by the fact that the distribution of each layer's inputs changes during training, as the parameters of the previous layers change. This slows down the training by requiring lower learning rates and careful parameter initialization, and makes it notoriously hard to train models with saturating nonlinearities. We refer to this phenomenon as internal covariate shift, and address the problem by normalizing layer inputs.\n",
+    "- [Dropout](http://jmlr.org/papers/v15/srivastava14a.html) is a technique which randomly drop units (along with their connections) from the neural network during training. This prevent the overfitting(bad generalization) in Deep neural nets."
    ]
   },
   {
@@ -444,7 +443,10 @@
    "source": [
     "## Train\n",
     "\n",
-    "Perform a 15 epochs training and plot Loss and Accuracy over the epochs."
+    "Perform a 5 epochs(5 time over the full dataset) training and plot Loss and Accuracy over the epochs. Why do we make this? Training is driven by 2 metrics:\n",
+    "\n",
+    "- Minimize the Loss, means that the error between model prediction and datatset label must the less as possible. This metric drives the training since the model parameters are update with respect to the Loss to improve the prediction.\n",
+    "- High Accuracy, means to correctly predict the sample to classify."
    ]
   },
   {
@@ -663,10 +665,9 @@
    "metadata": {},
    "source": [
     "## Summary\n",
+    "Great! You achieved 98% accuracy and familiarized yourself with Jupyter Notebooks running on FloydHub. This is just the beginning of your deep learning journey on FloydHub! We're excited to see what your next experiments.\n",
     "\n",
-    "Great you have achieved 98% of accuracy and familiarize with Jupyter Notebook running a Deep Learning workflow on FloydHub. This is only the starting point on your Deep Learning journey on FH, we encourage you to experiments.\n",
-    "\n",
-    "If you need help on DeepLearning content or you cannot find an answer to your questions after read our great [Docs](https://docs.floydhub.com/), you can open a Topic in the [Forum](https://forum.floydhub.com/) where we provide a great customer service there :). Moreover your issues can help us to improving FloydHub and other users and solving your same problems.\n",
+    "If you need help with deep learning content or you cannot find an answer to your questions in our [documentation](https://docs.floydhub.com/), then you can open a topic in our community [forum](https://forum.floydhub.com/). We're eager to continue improving FloydHub to help your deep learning journey.\n",
     "\n",
     "Happy Learning!"
    ]
