change the parenthesis

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -233,8 +233,8 @@
     "        len(train_loader.dataset),\n",
     "        100. * batch_idx / len(train_loader), \n",
     "        loss.cpu().data[0],\n",
-    "        accuracy*100,\n",
-    "        end=''))"
+    "        accuracy*100),\n",
+    "        end='')"
    ]
   },
   {
